# Distributed-Vector-Distance-Calculator

./: .gitignore  2times.csv  CMakeLists.txt  README.md  averagedData.csv  averager.py  directoryScanner.cpp  hostfile  main.cpp  pca.py
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
include/: Directory.hpp  parser.hpp  timing.hpp  vectorMatch.hpp
mpiExamples/: Makefile  dboard.c  mpi_pi_reduce.c  mpi_test.cpp  sample_file_word_count.cpp
src/: Directory.cpp  parser.cpp  timing.cpp  vectorMatch.cpp
timingResults/: times.csv  topValues.csv  topValuesPar.csv
